peigo-ms-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-activities
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: if ($http_error) {return 401;}
    nginx.org/client-max-body-size: 5m
    nginx.org/listen-ports: "8090"
    nginx.org/listen-ports-ssl: "8443"
    nginx.org/mergeable-ingress-type: minion
spec:
  ingressClassName: nginx
  rules:
  - host: api.sandbox.peigo.com.ec
    http:
      paths:
      - backend:
          service:
            name: ms-activities
            port:
              number: 8080
        path: "/api/v1/activities"
        pathType: ImplementationSpecific
